# minishell

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_flags.txt  file.c  w
.github/workflows/: ctest.yml  e2e.yml  norm.yml
e2e_tests/: add.sh  e2e_test.sh  run.sh
e2e_tests/tests/basic/: basic.in
e2e_tests/tests/builtins/: cd_basic.expected  cd_basic.in  cd_canonicalize.in  cd_canonicalize_invalid.err  cd_canonicalize_invalid.expected  cd_rm_cwd.expected  cd_rm_cwd.in  export_basic.expected  export_basic.in
e2e_tests/tests/exit_status/: redirect_in_not_found_file.err  redirect_in_not_found_file.expected  redirect_out_current_dir.err  redirect_out_current_dir.expected
e2e_tests/tests/heredoc/: delimiter_with_quote.in  double_quoted_delimiter.in  expansion.in  normal.expected  normal.in  single_quoted_delimiter.in
e2e_tests/tests/syntax/: unmatching_double_quote.expected  unmatching_paren.expected  unmatching_single_quote.expected
include/: ast.h  builtin.h  builtins.h  characters.h  context.h  expansion.h  hooks.h  init.h  lexer.h  parser.h  sig.h  signal.h  token.h  utils.h  variable.h  variables.h
libft/: .gitignore  CMakeLists.txt  Makefile
libft/ctype/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_tolower.c  ft_toupper.c
libft/include/: ft_ctype.h  ft_list.h  ft_stdio.h  ft_stdlib.h  ft_string.h  ft_strings.h  libft.h
libft/list/: internal.c  list_append.c  list_clear.c  list_copy.c  list_create.c  list_destroy.c  list_exclude.c  list_filter.c  list_find.c  list_get.c  list_insert.c  list_internal.h  list_iter.c  list_pop.c  list_push.c  list_remove.c
libft/stdio/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
libft/stdio/ft_dprintf/: .gitignore  dprintf_internal.h  ft_dprintf.c  ft_putnbr_base.c  internal.h  parse_placeholder.c  to_enum.c
libft/stdio/get_next_line/: .gitignore  get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/stdlib/: ft_atoi.c  ft_atol.c  ft_atoll.c  ft_calloc.c  ft_itoa.c  ft_setenv.c  ft_xmalloc.c  xmalloc.c
libft/string/: ft_basename.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_split.c  ft_strall.c  ft_strany.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnlen.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
libft/strings/: ft_bzero.c
libft/test/: CMakeLists.txt  list.cpp
libft/tests/: CMakeLists.txt  basename.cpp  list.cpp
src/: init.c  main.c
src/ast/: append_node_argv.c  constructor.c  destructor.c  getter.c  setter.c
src/builtin/: builtin_internal.h  echo.c  env.c  error.c  exit.c  get_next_option.c  pwd.c  unset.c  util_internal.c
src/builtin/cd/: canonicalize_absolute_path.c  canonicalize_path.c  cd.c  cd_internal.h  change_directory.c  join_path.c
src/builtin/export/: export.c  export_each_arg.c  no_arg.c
src/builtins/: builtins_internal.h  echo.c  env.c  error.c  exit.c  get_builtin_func.c  get_next_option.c  pwd.c  unset.c  utils_internal.c
src/builtins/cd/: canonicalize_absolute_path.c  cd.c  cd_internal.h  change_directory.c
src/builtins/export/: export.c  export_each_arg.c  export_internal.h  no_arg.c
src/exec/: configure_io.c  exec_internal.h  execute_ast.c  execvp.c  get_ast_handler.c  handle_and_or.c  handle_command.c  handle_pipeline.c  handle_semicolon.c  handle_subshell.c  lookup_message.c  pipeline_info.c  utils_internal.c  wait_children.c
src/hooks/: hooks.c
src/init/: init_internal.h  init_loop.c  init_shell.c  utils_internal.c
src/lexer/: constructor.c  destructor.c  error.c  escape.c  get_next_token.c  getter.c  lexer_internal.h  quote.c  read.c  setter.c  tokenize.c
src/lexer/getter/: get_cur_char.c  get_cur_token_type.c  get_input.c  get_input_snapshot.c  get_quote_char.c  get_token_len.c  has_empty_input.c
src/parser/: and_or.c  command.c  complete_command.c  constructor.c  consume.c  destructor.c  error.c  getter.c  here_doc.c  is_eof.c  parse.c  parser_internal.h  pipeline.c  redirect.c  setter.c  simple_command.c  utils_internal.c  word_cmd_suffix.c
src/parser/word_expansion/: expand_filename.c  expand_filenames.c  expand_parameters.c  expand_parameters_utils.c  expand_word.c  expand_word_list.c  is_match.c  parameter.c  remove_quotes.c  split_word.c  utils.c  word.c  word_expansion_internal.h
src/signal/: set_sig_handlers.c  sig_handler.c  signal_internal.h
src/token/: constructor.c  destructor.c  getter.c  push.c
src/utils/: char.c  directory.c  error.c  fs.c  list.c  memory.c  message.c
src/variable/: create.c  getvar.c  parse.c  setvar.c  unsetvar.c  util.c  util_internal.c  validate.c  variable_internal.h
src/variables/: constructor.c  exportvar.c  get_environ.c  getvar.c  parse.c  setvar.c  unsetvar.c  utils_internal.c  validate.c  variables_internal.h
test/: CMakeLists.txt  builtin_echo.cpp  builtin_env.cpp  builtin_exit.cpp  builtin_export.cpp  builtin_unset.cpp  canonicalize_path.cpp  get_next_option.cpp  join_path.cpp  variable.cpp  variable_parse.cpp
tests/: CMakeLists.txt  builtins_echo.cpp  builtins_env.cpp  builtins_exit.cpp  builtins_export.cpp  builtins_unset.cpp  canonicalize_absolute_path.cpp  execute_ast.cpp  get_environ.cpp  get_next_option.cpp  join_path.cpp  lexer.cpp  parse_variable_assignment.cpp  parser.cpp  variable_parse.cpp  variables.cpp  word_expansion.cpp
tests/utils/: ast_builder.cpp  ast_builder.hpp  compare_ast.cpp  compare_ast.hpp  compare_list.cpp  compare_list.hpp  context.cpp  context.hpp
